yoav - before tal's vetex